Fixes CTA spacing on desktop
(removes bottom margin below p element)

--- a/website/src/css/imports/cta.css
+++ b/website/src/css/imports/cta.css
@@ -28,6 +28,7 @@
       font-size: 18px;
       line-height: 25px;
       color: $lightishGrey;
+      margin: 0;
 
       .hook {
         font-weight: $bold;
